--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         < Misulo Nicole Nalavwe /> 
     </h1>
     <div class="nav-links">
-        <a href="./Index.html">Home</a>
-        <a href="./Index.html">About</a>
+        <a href="./index.html">Home</a>
+        <a href="./index.html">About</a>
         <a href="./resume.html">Resume</a>
         <a href="./form.html">Contact</a>
     </div>
